tests/error/nested_errors/different_types_if.err
Error: Different types (at $FILE:13:11)
   | 
11 |             return False
12 | 
13 |     return bar()
   |            ^^^ Variable `bar` may refer to different types
   | 
 7 |         def bar() -> int:
   |         -----------------
 8 |             return 0
   | -------------------- This is of type `() -> int`
   | 
10 |         def bar() -> bool:
   |         ------------------
11 |             return False
   | ------------------------ This is of type `() -> bool`

Guppy compilation failed due to 1 previous error
